update layout and add a couple of views

--- a/static/css/_vars.scss
+++ b/static/css/_vars.scss
@@ -26,7 +26,7 @@
 $use-grids:         true;
 $use-flexbox:       false;
 $use-columns:       false;
-$use-nav:           false;
+$use-nav:           true;
 $use-options:       false;
 $use-pagination:    false;
 $use-breadcrumb:    false;
@@ -46,7 +46,7 @@ $use-beautons:      true;
 $use-lozenges:      false;
 $use-rules:         false;
 $use-stats:         false;
-$use-greybox:       false;
+$use-greybox:       true;
 
 
 
