--- a/views/index.html
+++ b/views/index.html
@@ -1,55 +1,2 @@
-<!--[if gte IE 9]><!DOCTYPE html><![endif]-->
-<!--[if !IE]> --><!DOCTYPE html><!-- <![endif]-->
-
-
-{{#if config.javascriptEnabled}}
-<html>
-{{else}}
-<html class="no-js">
-{{/if}}
-
-<head>
-	<title>LinacQA</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
-	<link href="/css/style.css" media="screen, projection" rel="stylesheet" type="text/css" />
-
-	<base href="/">
-
-	<!-- {{#if config.javascriptEnabled}}
-	<script type="text/javascript">
-		var rawData = {{{dataJson}}};
-	</script>
-
-	<noscript>
-		<meta http-equiv="Refresh" content="0;URL={{config.path}}?ns" />
-	</noscript>
-	{{else}}
-	{{/if}} -->
-
-</head>
-<body>
-
-	<h1>Home</h1>
-
-	{{#if config.javascriptEnabled}}
-		{{#if config.dev}}
-			{{#each imports.scripts}}
-			<script type="text/javascript" src="{{this}}"></script>{{/each}}
-		{{else}}
-		<script type="text/javascript" src="{{imports.compressed}}"></script>
-		{{/if}}
-	{{/if}}
-
-	<!-- {{#if config.dev}}
-	<script type="text/javascript">
-		if(location.host.indexOf("localhost") > -1 || location.host.indexOf("localhost") > -1) {
-			document.write('<script src=\"http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1\"></' + 'script>');
-		}
-	</script>
-	{{/if}} -->
-
-
-</body>
-</html>
+<h1>Home</h1>
+<p>This is the homepage.</p>
