--- a/static/css/_vars.scss
+++ b/static/css/_vars.scss
@@ -59,8 +59,11 @@ $use-greybox:       false;
  * Place any variables that should override inuit.css’ defaults here.
  */
 
-$brand-color: #9da6b2;
-$brand-round: 3px;
+$brand-color: 		#3a7cdb;
+$brand-round: 		3px;
+
+$base-font-size:    15px;
+$base-line-height:  24px; // also doubles as base-spacing-unit
 
 
 
@@ -71,6 +74,9 @@ $brand-round: 3px;
  * Place any of your own variables that sit on top of inuit.css here.
  */
  
-$max-width: 1024px;
-$body-background: #f5f5f5;
-$wrapper-background: #fff;
+$max-width: 			1024px;
+$body-background: 		#f5f5f5;
+$wrapper-background: 	#fff;
+
+$base-color: 			#9da6b2;
+$primary-color: 		#40526a;
